--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <img src="/image/download.jpeg" alt="images of a okcl company">
+    <img src="image/download.jpeg" alt="images of a okcl company">
     <div class="grid-container">
         <div class="grid-item">Candidate Name :</div>
         <div class="grid-item"></div>
